@@ -26,7 +26,7 @@ package com.gazbert.bxbot.exchanges;
 import com.gazbert.bxbot.exchange.api.AuthenticationConfig;
 import com.gazbert.bxbot.exchange.api.ExchangeAdapter;
 import com.gazbert.bxbot.exchange.api.ExchangeConfig;
-import com.gazbert.bxbot.exchange.api.OptionalConfig;
+import com.gazbert.bxbot.exchange.api.OtherConfig;
 import com.gazbert.bxbot.exchanges.trading.api.impl.*;
 import com.gazbert.bxbot.trading.api.*;
 import com.google.common.base.MoreObjects;
@@ -37,10 +37,11 @@ import org.apache.logging.log4j.Logger;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Type;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -263,7 +264,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
         LOG.info(() -> "About to initialise Kraken ExchangeConfig: " + config);
         setAuthenticationConfig(config);
         setNetworkConfig(config);
-        setOptionalConfig(config);
+        setOtherConfig(config);
 
         nonce = System.currentTimeMillis() / 1000; // set the initial nonce used in the secure messaging.
         initSecureMessageLayer();
@@ -356,7 +357,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
     @Override
     public List<OpenOrder> getYourOpenOrders(String marketId) throws TradingApiException, ExchangeNetworkException {
 
-        ExchangeHttpResponse response = null;
+        ExchangeHttpResponse response;
 
         try {
 
@@ -453,7 +454,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
     public String createOrder(String marketId, OrderType orderType, BigDecimal quantity, BigDecimal price) throws
             TradingApiException, ExchangeNetworkException {
 
-        ExchangeHttpResponse response = null;
+        ExchangeHttpResponse response;
 
         try {
 
@@ -527,7 +528,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
     @Override
     public boolean cancelOrder(String orderId, String marketIdNotNeeded) throws TradingApiException, ExchangeNetworkException {
 
-        ExchangeHttpResponse response = null;
+        ExchangeHttpResponse response;
 
         try {
             final Map<String, String> params = createRequestParamMap();
@@ -593,7 +594,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
     @Override
     public BigDecimal getLatestMarketPrice(String marketId) throws TradingApiException, ExchangeNetworkException {
 
-        ExchangeHttpResponse response = null;
+        ExchangeHttpResponse response;
 
         try {
 
@@ -650,7 +651,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
     @Override
     public BalanceInfo getBalanceInfo() throws TradingApiException, ExchangeNetworkException {
 
-        ExchangeHttpResponse response = null;
+        ExchangeHttpResponse response;
 
         try {
 
@@ -714,16 +715,14 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
     }
 
     @Override
-    public BigDecimal getPercentageOfBuyOrderTakenForExchangeFee(String marketId) throws TradingApiException,
-            ExchangeNetworkException {
+    public BigDecimal getPercentageOfBuyOrderTakenForExchangeFee(String marketId) {
         // Kraken does not provide API call for fetching % buy fee; it only provides the fee monetary value for a
         // given order via the OpenOrders API call. We load the % fee statically from exchange.xml file.
         return buyFeePercentage;
     }
 
     @Override
-    public BigDecimal getPercentageOfSellOrderTakenForExchangeFee(String marketId) throws TradingApiException,
-            ExchangeNetworkException {
+    public BigDecimal getPercentageOfSellOrderTakenForExchangeFee(String marketId) {
         // Kraken does not provide API call for fetching % sell fee; it only provides the fee monetary value for a
         // given order via the OpenOrders API call. We load the % fee statically from exchange.xml file.
         return sellFeePercentage;
@@ -826,7 +825,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
 
         // field names map to the JSON arg names
         public List<String> error;
-        public T result; // TODO fix up the Generics abuse ;-o
+        public T result;
 
         @Override
         public String toString() {
@@ -853,6 +852,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
      * GSON class that wraps a Ticker API call result.
      */
     private static class KrakenTickerResult extends HashMap<String, String> {
+        KrakenTickerResult() {}
     }
 
     /**
@@ -1018,6 +1018,8 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
      */
     private static class KrakenTickerResultDeserializer implements JsonDeserializer<KrakenTickerResult> {
 
+        KrakenTickerResultDeserializer() {}
+
         public KrakenTickerResult deserialize(JsonElement json, Type type, JsonDeserializationContext context)
                 throws JsonParseException {
 
@@ -1115,10 +1117,9 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
                     if (queryString.length() > 1) {
                         queryString.append("&");
                     }
-                    //noinspection deprecation
                     queryString.append(param.getKey());
                     queryString.append("=");
-                    queryString.append(URLEncoder.encode(param.getValue(), "UTF-8"));
+                    queryString.append(URLEncoder.encode(param.getValue(), StandardCharsets.UTF_8));
                 }
 
                 requestHeaders.put("Content-Type", "application/x-www-form-urlencoded");
@@ -1127,7 +1128,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
             final URL url = new URL(PUBLIC_API_BASE_URL + apiMethod + queryString);
             return makeNetworkRequest(url, "GET", null, requestHeaders);
 
-        } catch (MalformedURLException | UnsupportedEncodingException e) {
+        } catch (MalformedURLException e) {
             final String errorMsg = UNEXPECTED_IO_ERROR_MSG;
             LOG.error(errorMsg, e);
             throw new TradingApiException(errorMsg, e);
@@ -1185,24 +1186,24 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
             // params.put("otp", "false");
 
             // Build the URL with query param args in it - yuk!
-            final StringBuilder postData = new StringBuilder("");
+            final StringBuilder postData = new StringBuilder();
             for (final Map.Entry<String, String> param : params.entrySet()) {
                 if (postData.length() > 0) {
                     postData.append("&");
                 }
                 postData.append(param.getKey());
                 postData.append("=");
-                postData.append(URLEncoder.encode(param.getValue(), "UTF-8"));
+                postData.append(URLEncoder.encode(param.getValue(), StandardCharsets.UTF_8));
             }
 
             // And now the tricky part... ;-o
 
-            final byte[] pathInBytes = ("/" + KRAKEN_API_VERSION + KRAKEN_PRIVATE_PATH + apiMethod).getBytes("UTF-8");
+            final byte[] pathInBytes = ("/" + KRAKEN_API_VERSION + KRAKEN_PRIVATE_PATH + apiMethod).getBytes(StandardCharsets.UTF_8);
             final String noncePrependedToPostData = Long.toString(nonce) + postData;
 
             // Create sha256 hash of nonce and post data:
             final MessageDigest md = MessageDigest.getInstance("SHA-256");
-            md.update(noncePrependedToPostData.getBytes("UTF-8"));
+            md.update(noncePrependedToPostData.getBytes(StandardCharsets.UTF_8));
             final byte[] messageHash = md.digest();
 
             // Create hmac_sha512 digest of path and previous sha256 hash
@@ -1222,7 +1223,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
             final URL url = new URL(AUTHENTICATED_API_URL + apiMethod);
             return makeNetworkRequest(url, "POST", postData.toString(), requestHeaders);
 
-        } catch (MalformedURLException | NoSuchAlgorithmException | UnsupportedEncodingException e) {
+        } catch (MalformedURLException | NoSuchAlgorithmException e) {
 
             final String errorMsg = UNEXPECTED_IO_ERROR_MSG;
             LOG.error(errorMsg, e);
@@ -1266,19 +1267,19 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
         secret = getAuthenticationConfigItem(authenticationConfig, SECRET_PROPERTY_NAME);
     }
 
-    private void setOptionalConfig(ExchangeConfig exchangeConfig) {
+    private void setOtherConfig(ExchangeConfig exchangeConfig) {
 
-        final OptionalConfig optionalConfig = getOptionalConfig(exchangeConfig);
+        final OtherConfig otherConfig = getOtherConfig(exchangeConfig);
 
-        final String buyFeeInConfig = getOptionalConfigItem(optionalConfig, BUY_FEE_PROPERTY_NAME);
-        buyFeePercentage = new BigDecimal(buyFeeInConfig).divide(new BigDecimal("100"), 8, BigDecimal.ROUND_HALF_UP);
+        final String buyFeeInConfig = getOtherConfigItem(otherConfig, BUY_FEE_PROPERTY_NAME);
+        buyFeePercentage = new BigDecimal(buyFeeInConfig).divide(new BigDecimal("100"), 8, RoundingMode.HALF_UP);
         LOG.info(() -> "Buy fee % in BigDecimal format: " + buyFeePercentage);
 
-        final String sellFeeInConfig = getOptionalConfigItem(optionalConfig, SELL_FEE_PROPERTY_NAME);
-        sellFeePercentage = new BigDecimal(sellFeeInConfig).divide(new BigDecimal("100"), 8, BigDecimal.ROUND_HALF_UP);
+        final String sellFeeInConfig = getOtherConfigItem(otherConfig, SELL_FEE_PROPERTY_NAME);
+        sellFeePercentage = new BigDecimal(sellFeeInConfig).divide(new BigDecimal("100"), 8, RoundingMode.HALF_UP);
         LOG.info(() -> "Sell fee % in BigDecimal format: " + sellFeePercentage);
 
-        final String keepAliveDuringMaintenanceConfig = getOptionalConfigItem(optionalConfig,
+        final String keepAliveDuringMaintenanceConfig = getOtherConfigItem(otherConfig,
                 KEEP_ALIVE_DURING_MAINTENANCE_PROPERTY_NAME);
         if (keepAliveDuringMaintenanceConfig != null && !keepAliveDuringMaintenanceConfig.isEmpty()) {
             keepAliveDuringMaintenance = Boolean.valueOf(keepAliveDuringMaintenanceConfig);
@@ -1304,9 +1305,7 @@ public final class KrakenExchangeAdapter extends AbstractExchangeAdapter impleme
     private static boolean isExchangeUndergoingMaintenance(ExchangeHttpResponse response) {
         if (response != null) {
             final String payload = response.getPayload();
-            if (payload != null && payload.contains(EXCHANGE_UNDERGOING_MAINTENANCE_RESPONSE)) {
-                return true;
-            }
+            return payload != null && payload.contains(EXCHANGE_UNDERGOING_MAINTENANCE_RESPONSE);
         }
         return false;
     }
